name:                attoparsec-varword
version:             0.1.0.0
synopsis:            Variable-length integer decoding for Attoparsec
description:
  A collection of 'Data.Attoparsec.Parser's that decode integer types from
  compact, variable-length representations.
homepage:            https://github.com/concertdaw/hs-varword#readme
bug-reports:         https://github.com/concertdaw/hs-varword/issues
stability:           Experimental
license:             LGPL-3
license-file:        LICENSE
author:              Paul Weaver
maintainer:          paul@concertdaw.co.uk
copyright:           2018 Concert Audio Technologies Ltd
category:            Data
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

source-repository head
  type:     git
  location: https://github.com/githubuser/attoparsec-varword

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  default-extensions:  BinaryLiterals
  exposed-modules:     Data.Attoparsec.VarWord
                     , Data.Attoparsec.VarWord.Internal
  build-depends:       base >= 4.7 && < 5
                     , attoparsec
  default-language:    Haskell2010

test-suite attoparsec-varword-test
  type:                exitcode-stdio-1.0
  main-is:             Spec.hs
  hs-source-dirs:      test
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  default-extensions:  BinaryLiterals
  build-depends:       base >= 4.7 && < 5
                     , attoparsec-varword
                     , attoparsec
                     , bytestring
                     , bytestring-builder-varword
                     , hspec
                     , QuickCheck
  other-modules:       Data.Attoparsec.VarWordSpec
  default-language:    Haskell2010
