name:                bytestring-builder-varword
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/concertdaw/hs-varword#readme
bug-reports:         https://github.com/concertdaw/hs-varword/issues
stability:           Experimental
license:             LGPL3
license-file:        LICENSE
author:              Paul Weaver
maintainer:          paul@concertdaw.co.uk
copyright:           2018 Concert Audio Technologies Ltd
category:            Data
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

source-repository head
  type:     git
  location: https://github.com/githubuser/attoparsec-varword

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  default-extensions:  BinaryLiterals
                     , ScopedTypeVariables
                     , TypeApplications
  exposed-modules:     Data.ByteString.Builder.Prim.VarWord
                     , Data.ByteString.Builder.VarWord
  build-depends:       base >= 4.7 && < 5
                     , bytestring
  default-language:    Haskell2010

test-suite bytestring-builder-varword-test
  type:                exitcode-stdio-1.0
  main-is:             Spec.hs
  hs-source-dirs:      test
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  default-extensions:  BinaryLiterals
                     , OverloadedStrings
  build-depends:       base >= 4.7 && < 5
                     , bytestring-builder-varword
                     , attoparsec-varword
                     , attoparsec
                     , bytestring
                     , hspec
                     , QuickCheck
  other-modules:       Data.ByteString.Builder.VarWordSpec
